# synthetic-augment-traffic-signs

./: .env.example  .gitignore  README.md  batch_run_det.py  pyproject.toml  reproduce.py  run_det.py  setup_env.py
configs/detection/: run.yaml
env/: environment.yml
refs/: diffusion_related.bib  references_final.bib
reports/: dfg_analysis.md  dfg_class_counts.csv  mtsd_analysis.md  mtsd_class_counts.csv  tt100k_analysis.md  tt100k_background_clusters.csv  tt100k_backgrounds.md  tt100k_class_counts.csv
reports/det/: epoch_report.md  report.json  report.md
scripts/: analyze_backgrounds.py  analyze_dfg.py  analyze_mtsd.py  analyze_tt100k.py  fetch_dfg.py  fetch_mtsd_images.py  plot_allocation.py  select_subset_coco.py
scripts/detection/: add_other_class.py  build_allocation.py  class_report.py  det_report.py  diagnose_tail_errors.py  epoch_report.py  eval_runs.py  generate_arm.py  investigate_tail.py  make_full_subset.py  make_splits.py  paper_samples.py  poc_signgen.py  poc_signgen_controlnet.py  precompute_sam_masks.py  prepare_dfg.py  prepare_tt100k.py  qa_contact_sheet.py  qa_paste_compare.py  qa_sim2real.py  recompute_metrics.py  run_convergence_probes.sh  select_subset.py  tile_panoramas.py  train_verifier.py  verify_signgen.py
src/detection/: __init__.py  allocation.py  ap_by_size.py  budget.py  diagnose.py  evaluate.py  prepare.py  reconstruct.py  report.py  run_naming.py  splits.py  stats.py  subset.py  tiling.py  train_harness.py  verifier.py
tests/unit/: test_degrade.py  test_det_allocation.py  test_det_batch.py  test_det_budget.py  (+21 more)
(+42 files in other folders)
